# tankgame

./: CMakeLists.txt  CREDITS  README.md  resources.mdf  todo.txt
TEMP/: CMakeLists.txt  main.cpp
data/images/: ClusterProjectile.ani  RocketProjectile.ani  crushed.ani
data/settings/: settings.txt
mdfgame/: CMakeLists.txt  Makefile  animation.cpp  animation.h  audio.cpp  audio.h  button.cpp  button.h  camera.cpp  camera.h  effects.cpp  effects.h  game.cpp  game.h  gamestate.cpp  gamestate.h  graphics.cpp  graphics.h  input.cpp  input.h  main.cpp  map.cpp  map.h  mdfgame.files  menu.cpp  menu.h  menuoptions.h  net.cpp  net.h  net_client.cpp  net_client.h  net_server.cpp  net_server.h  net_translations.h  net_util.cpp  net_util.h  physics.cpp  physics.h  planet.cpp  planet.h  (+16 more)
mdfgame/data/images/: FlamerFire.ani  JetFire.ani
mdfgame/data/maps/: WorldOne.txt
